@@ -1,6 +1,6 @@
 % File src/library/base/man/hexmode.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2009 R Core Development Team
+% Copyright 1995-2010 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{hexmode}
@@ -9,6 +9,9 @@
 \alias{print.hexmode}
 \alias{as.character.hexmode}
 \alias{[.hexmode}
+\alias{|.hexmode}
+\alias{&.hexmode}
+\alias{xor.hexmode}
 \alias{hexmode}
 \title{Display Numbers in Hexadecimal}
 \description{
@@ -45,6 +48,10 @@ as.hexmode(x)
   \code{"double"}) and character vectors whose elements contain only
   \code{0-9}, \code{a-f}, \code{A-F} (or are \code{NA}) to class
   \code{"hexmode"}.
+
+  There are \code{\link{|}}, \code{\link{&}} and \code{\link{xor}}
+  methods: these recycle their arguments to the length of the longest
+  and then apply the operators bitwise to each element.
 }
 \seealso{
   \code{\link{octmode}}, \code{\link{sprintf}} for other options in
