@@ -1,6 +1,6 @@
 % File src/library/base/man/octmode.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2009 R Core Development Team
+% Copyright 1995-2010 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{octmode}
@@ -9,6 +9,9 @@
 \alias{print.octmode}
 \alias{as.character.octmode}
 \alias{[.octmode}
+\alias{|.octmode}
+\alias{&.octmode}
+\alias{xor.octmode}
 \alias{octmode}
 \title{Display Numbers in Octal}
 \description{
@@ -43,6 +46,10 @@ as.octmode(x)
   \code{as.octmode} can convert integers (of \link{type} \code{"integer"} or
   \code{"double"}) and character vectors whose elements contain only
   digits \code{0-7} (or are \code{NA}) to class \code{"octmode"}.
+
+  There are \code{\link{|}}, \code{\link{&}} and \code{\link{xor}}
+  methods: these recycle their arguments to the length of the longest
+  and then apply the operators bitwise to each element.
 }
 \seealso{
   These are auxiliary functions for \code{\link{file.info}}.
@@ -54,6 +61,10 @@ as.octmode(x)
 \examples{
 (on <- as.octmode(c(16,32, 127:129))) # "020" "040" "177" "200" "201"
 unclass(on[3:4]) # subsetting
+
+## manipulate file modes
+fmode <- as.octmode("170")
+(fmode | "644") & "755"
 }
 \keyword{utilities}
 \keyword{print}
