@@ -241,6 +241,10 @@ static R_CallMethodDef callMethods [] = {
     CALLDEF(Rg_contourDef, 0),
     CALLDEF(Rg_readonlypars, 0),
 
+    CALLDEF(bitwiseAnd, 2),
+    CALLDEF(bitwiseOr, 2),
+    CALLDEF(bitwiseXor, 2),
+
     {NULL, NULL, 0}
 };
 
